Fix: Use margin for overlapping elements

--- a/mixins/__columns-gutter.scss
+++ b/mixins/__columns-gutter.scss
@@ -13,7 +13,7 @@
 
 				> [class*="col"] {
 					padding-left: $gutter;
-					padding-top: $gutter;
+					margin-top: $gutter;
 				}
 
 				+ .row {
